--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,6 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--color-surface);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -359,7 +358,7 @@ body::before {
 }
 
 .coming-soon {
-    font-size: var(--font-size-lg);
+    font-size: var(--font-size-3xl) !important;;
     font-weight: var(--font-weight-semibold);
     margin: 0;
     color: var(--color-primary);
